--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.3",
+    "@monaco-editor/react": "^4.7.0",
     "convex": "^1.19.5",
+    "framer-motion": "^12.4.10",
+    "lucide-react": "^0.477.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "svix": "^1.61.2"
+    "svix": "^1.61.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
