new-project page: tiptap text-editor layout

--- a/package.json
+++ b/package.json
@@ -30,6 +30,18 @@
     "@supabase/supabase-js": "^2.57.2",
     "@tanstack/react-query": "^5.87.1",
     "@tanstack/react-query-devtools": "^5.87.3",
+    "@tiptap/extension-bullet-list": "^3.4.2",
+    "@tiptap/extension-code": "^3.4.2",
+    "@tiptap/extension-code-block": "^3.4.2",
+    "@tiptap/extension-heading": "^3.4.2",
+    "@tiptap/extension-list-item": "^3.4.2",
+    "@tiptap/extension-mention": "^3.4.2",
+    "@tiptap/extension-ordered-list": "^3.4.2",
+    "@tiptap/extension-text-align": "^3.4.2",
+    "@tiptap/extension-underline": "^3.4.2",
+    "@tiptap/pm": "^3.4.2",
+    "@tiptap/react": "^3.4.2",
+    "@tiptap/starter-kit": "^3.4.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.19.5",
