--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "email:dev": "email dev"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.3",
@@ -28,6 +29,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-email/components": "0.5.3",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.2",
     "@tanstack/react-query": "^5.87.1",
@@ -59,6 +61,7 @@
     "react-hot-toast": "^2.5.2",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.4",
+    "resend": "^6.1.0",
     "sonner": "^2.0.7",
     "svix": "^1.61.2",
     "tailwind-merge": "^3.3.1",
@@ -75,6 +78,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
+    "react-email": "4.2.11",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
