--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^6.12.3",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
+    "@hookform/resolvers": "^5.2.2",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -55,10 +56,9 @@
     "next": "^15.5.2",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
-    "react-d3-cloud": "^1.0.6",
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.1",
-    "react-hook-form": "^7.62.0",
+    "react-hook-form": "^7.63.0",
     "react-hot-toast": "^2.5.2",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.4",
@@ -68,7 +68,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
-    "zod": "^4.1.5",
+    "zod": "^4.1.11",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
