--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "convex": "^1.19.5",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.10",
+    "groq-sdk": "^0.32.0",
     "lucide-react": "^0.477.0",
     "next": "^15.5.2",
     "next-themes": "^0.4.6",
