--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.10",
     "groq-sdk": "^0.32.0",
+    "keyword-extractor": "^0.0.28",
     "lucide-react": "^0.477.0",
     "next": "^15.5.2",
     "next-themes": "^0.4.6",
@@ -66,6 +67,7 @@
     "recharts": "^2.15.4",
     "resend": "^6.1.0",
     "sonner": "^2.0.7",
+    "string-similarity": "^4.0.4",
     "svix": "^1.61.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
@@ -78,6 +80,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/string-similarity": "^4.0.2",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
