--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "next": "^15.5.2",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
+    "react-d3-cloud": "^1.0.6",
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.63.0",
