--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "0.5.3",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/vision": "^4.10.2",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.2",
     "@tanstack/react-query": "^5.87.1",
@@ -59,6 +61,7 @@
     "keyword-extractor": "^0.0.28",
     "lucide-react": "^0.477.0",
     "next": "^15.5.2",
+    "next-sanity": "^11.4.2",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-day-picker": "^9.9.0",
@@ -68,8 +71,10 @@
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.4",
     "resend": "^6.1.0",
+    "sanity": "^4.10.2",
     "sonner": "^2.0.7",
     "string-similarity": "^4.0.4",
+    "styled-components": "^6.1.19",
     "svix": "^1.61.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
