--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "sanity": "^4.10.2",
     "sonner": "^2.0.7",
     "string-similarity": "^4.0.4",
+    "stripe": "^19.1.0",
     "styled-components": "^6.1.19",
     "svix": "^1.61.2",
     "tailwind-merge": "^3.3.1",
