--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.63.0",
     "react-hot-toast": "^2.5.2",
+    "react-player": "^2.12.0",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.4",
     "resend": "^6.1.0",
@@ -87,6 +88,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
