--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@sanity/client": "^7.12.0",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.10.2",
+    "@stream-io/node-sdk": "^0.7.11",
+    "@stream-io/video-react-sdk": "^1.24.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.2",
     "@tanstack/react-query": "^5.87.1",
