--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "framer-motion": "^12.4.10",
     "groq-sdk": "^0.32.0",
     "keyword-extractor": "^0.0.28",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.477.0",
     "next": "^15.5.2",
     "next-sanity": "^11.4.2",
